2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* src/storage-manager.c (almanah_storage_manager_disconnect): Fixed
	string ("s/almanah/diary/").

2008-11-13  Philip Withnall  <philip@tecnocode.co.uk>

	* src/interface.c (almanah_calendar_month_changed_cb):
	* src/main-window.c (mw_entry_buffer_cursor_position_cb):
	* src/storage-manager.c (almanah_storage_manager_query),
	(almanah_storage_manager_free_results),
	(almanah_storage_manager_get_statistics),
	(almanah_storage_manager_get_month_marked_days): Changed from GSlice
	allocation to the more-appropriate g_malloc and g_new.
	May fix some slice-related crashes on quitting.

2008-10-28  Philip Withnall  <philip@tecnocode.co.uk>

	* src/Makefile.am:
	* src/entry.c (almanah_entry_get_content):
	* src/interface.c (almanah_create_interface):
	* src/main-window.c (almanah_main_window_new),
	(mw_preferences_activate_cb):
	* src/main.c (storage_manager_disconnected_cb), (almanah_quit),
	(main):
	* src/main.h: Only allow the Preferences dialogue to be opened if
	encryption support is compiled in.
	* src/storage-manager.c (almanah_storage_manager_get_statistics):
	Fix a crasher when getting database statistics.

2008-10-28  Philip Withnall  <philip@tecnocode.co.uk>

	Updated svn:ignore lists.

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/Makefile.am:
	* data/almanah.schemas.in:
	* src/main-window.c (almanah_main_window_dispose),
	(almanah_main_window_new), (save_window_state),
	(restore_window_state), (mw_delete_event_cb): Save the window
	dimensions and position upon exiting, and restore them when starting
	the program. Promotes the dependency on GConf to be mandatory (was
	previously dependent on compiling with encryption support).
	* src/links/file.c (file_view): Fix a compilation error about
	mismatched pointer types.

2008-10-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/add-link-dialog.c (almanah_add_link_dialog_new):
	* src/interface.c:
	* src/interface.h: